RESOLVED FIXED238004
Adjust anchor/focus nodes after removal when LiveRangeSelection is enabled
https://bugs.webkit.org/show_bug.cgi?id=238004
Summary Adjust anchor/focus nodes after removal when LiveRangeSelection is enabled
Frédéric Wang Nélar
Reported 2022-03-16 23:54:44 PDT
.
Attachments
Patch (4.84 KB, patch)
2022-03-17 00:04 PDT, Frédéric Wang Nélar
no flags
Frédéric Wang Nélar
Comment 1 2022-03-17 00:04:41 PDT
Frédéric Wang Nélar
Comment 2 2022-03-21 23:48:05 PDT
Comment on attachment 454936 [details] Patch Regarding the mac-AS-debug-wk2 failure: I cannot reproduce the crashes locally + the tests don't seem to enable LiveRangeSelection or use selection API + I see that other builds had similar issues e.g. https://ews-build.webkit.org/#/builders/60/builds/26993 https://ews-build.webkit.org/#/builders/60/builds/26814 https://ews-build.webkit.org/#/builders/60/builds/26792 https://ews-build.webkit.org/#/builders/60/builds/26789 So I'll just land it.
EWS
Comment 3 2022-03-22 00:22:18 PDT
Committed r291605 (248698@main): <https://commits.webkit.org/248698@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454936 [details].
Radar WebKit Bug Importer
Comment 4 2022-03-22 00:23:15 PDT
Note You need to log in before you can comment on or make changes to this bug.