Adjust anchor/focus nodes after removal when LiveRangeSelection is enabled https://bugs.webkit.org/show_bug.cgi?id=238004

Patch by Frédéric Wang <fwang@igalia.com> on 2022-03-22
Reviewed by Ryosuke Niwa.

This patch ensures that FrameSelection::nodeWillBeRemoved adjusts m_anchor and m_focus
when corresponding nodes are removed from the DOM tree. There are no behavior changes
when live range is disabled.

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::nodeWillBeRemoved): When live range is enabled,
Ensure that anchor nodes are updated even when the selection is none and pass information
about whether anchor or focus are removed by the node removal.
(WebCore::FrameSelection::respondToNodeModification): Adjust anchor and focus if they
are removed, when live range is enabled.
* editing/FrameSelection.h: Add arguments for anchor and focus.


Canonical link: https://commits.webkit.org/248698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291605 268f45cc-cd09-0410-ab3c-d52691b4dbfc